--- a/style.css
+++ b/style.css
@@ -201,7 +201,7 @@ nav a:hover {
 .hero button {
     display: inline;
     padding: 5px;
-    padding: 1rem 3rem;
+    padding: 1rem 2rem;
     text-decoration: none;
     border-radius: 5%;
     cursor: pointer;
@@ -881,8 +881,8 @@ input[type=checkbox]:checked:after {
         align-items: center;
         justify-self: center;
         width: 50%;
-        margin-right: 20%;
-        margin-bottom: 15%;
+        margin-right: 1em;
+        margin-bottom: 2em;
         color: var(--dark-black);
     }
     .hero-two p {
@@ -890,7 +890,7 @@ input[type=checkbox]:checked:after {
         word-break: break-word;
     }
     .hero-two-profile {
-        writing-mode: vertical-lr;
+        writing-mode: vertical-rl;
         flex-direction: row;
         margin-left: 30px;
     }
@@ -920,14 +920,15 @@ input[type=checkbox]:checked:after {
         word-break: break-word;
         width: 30%;
         justify-content: center;
-        left: 10%;
+        left: 12em;
+        font-size: 1.3rem;
     }
     .row button {
         border: none;
         text-decoration: none;
         position: relative;
-        top: 30%;
-        left: 10%;
+        top: 8em;
+        left: 3em;
         display: inline-flex;
         padding: 5px;
         padding: 1rem 2.5rem;
@@ -947,11 +948,11 @@ input[type=checkbox]:checked:after {
     #subheading {
         all: unset;
         position: absolute;
-        top: 17%;
-        left: 15%;
+        top: 2.3em;
+        left: 12em;
         color: var(--blue);
         font-weight: bold;
-        font-size: 24px;
+        font-size: 2rem;
         line-height: 0;
         text-align: center;
     }
@@ -1207,15 +1208,53 @@ input[type=checkbox]:checked:after {
     }
     /*PRE FOOTER*/
     .pre-footer {
-        background-color: var(--blue);
         position: relative;
         display: inline;
         width: 100%;
     }
     .pre-footer-container {
+        background-color: var(--blue);
         display: grid;
-        grid-template-columns: repeat(4, (300px, 1fr));
+        grid-template-columns: 25% 25% 25% 25%;
         grid-template-rows: auto;
+        justify-items: center;
+        align-items: center;
+        height: 50vh;
+        color: var(--ogwhite);
+    }
+    .pre-footer h1,
+    img {
+        text-align: center;
+    }
+    .pre-footer img {
+        margin-left: 3em;
+    }
+    .pre-footer-row ul {
+        list-style: none;
+    }
+    .pre-footer-row li {
+        padding: 10px;
+    }
+    .footer {
+        padding: 0;
+        margin: 0;
+        min-height: 8vh;
+        display: flex;
+        flex-direction: row;
+        font-size: 1.3rem;
+    }
+    .footer-container {
+        display: grid;
+        grid-template-columns: 50% 50%;
+    }
+    .footer-img {
+        display: flex;
+        flex-direction: row;
+        gap: 25px;
+        margin-top: 15px;
+    }
+    .footer p {
+        opacity: 0.75;
     }
 }
 
